<?xml version="1.0" encoding="utf-8"?>
<!--
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/margin_small"
    android:id="@+id/main"
    tools:context=".MainActivity"
    tools:ignore="ButtonStyle">

    <TextView
        android:id="@+id/sectionTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/section_title"
        android:textAlignment="center"
        android:layout_margin="@dimen/margin_large"
        android:textSize="@dimen/subheader_text_size"
        android:textColor="@color/header_color"/>

<GridLayout
    android:layout_width="@dimen/grid_layout_width"
    android:layout_height="@dimen/grid_layout_height"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/sectionTitle"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_marginBottom="@dimen/margin_large"
    android:layout_marginTop="@dimen/margin_large"
    android:layout_marginLeft="@dimen/margin_medium"
    android:layout_marginRight="@dimen/margin_medium"
    android:rowCount="@integer/grid_row_count"
    android:columnCount="@integer/grid_col_count"
    >

    <Button
        android:width="@dimen/grid_button_width"
        android:height="@dimen/grid_button_height"
        android:text="@string/btn_one"
        android:layout_margin="@dimen/margin_small"
        android:backgroundTint="@color/grid_button_background"
        android:textColor="@color/button_text_color"
        />

    <Button
        android:width="@dimen/grid_button_width"
        android:height="@dimen/grid_button_height"
        android:text="@string/btn_two"
        android:layout_margin="@dimen/margin_small"
        android:backgroundTint="@color/grid_button_background"
        android:textColor="@color/button_text_color"
        />

    <Button
        android:width="@dimen/grid_button_width"
        android:height="@dimen/grid_button_height"
        android:text="@string/btn_three"
        android:layout_margin="@dimen/margin_small"
        android:backgroundTint="@color/grid_button_background"
        android:textColor="@color/button_text_color"
        />

    <Button
        android:width="@dimen/grid_button_width"
        android:height="@dimen/grid_button_height"
        android:text="@string/btn_four"
        android:layout_margin="@dimen/margin_small"
        android:backgroundTint="@color/grid_button_background"
        android:textColor="@color/button_text_color"
        />

</GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>